--- a/css/main.css
+++ b/css/main.css
@@ -6,7 +6,7 @@
 	--velo-primary-color: #fff;
 	--velo-primary-color-rgba: rgba(255, 255, 255, .6);
 	--velo-secoundary-color: #606982;
-    --velo-main-color: #00ff48;
+    --velo-main-color: #48aefc;
 	--velo-main-hover: rgba(0, 154, 255, 0.18);
 	--velo-main-color-rgba: rgba(0, 123, 255, .4);
 	--velo-main-color-rgba-2: rgba(0, 123, 255, .2);
